--- a/less/theme.less
+++ b/less/theme.less
@@ -93,33 +93,135 @@ ul,ol{
 // animation
 // ------------------
 
+body{
+	-webkit-animation: color_change 120s infinite alternate;
+  -moz-animation: color_change 120s infinite alternate;
+  -ms-animation: color_change 120s infinite alternate;
+  -o-animation: color_change 120s infinite alternate;
+  animation: color_change 120s infinite alternate;
+}
+
+@-webkit-keyframes color_change {
+  0% { background-color: hsla(0, 53%, 61%, 1); }
+  25% { background-color: hsla(90, 53%, 61%, 1); }
+  50% { background-color: hsla(180, 53%, 61%, 1); }
+  75% { background-color: hsla(270, 53%, 61%, 1); }
+  100% { background-color: hsla(360, 53%, 61%, 1); }
+}
+@-moz-keyframes color_change {
+  0% { background-color: hsla(0, 53%, 61%, 1); }
+  25% { background-color: hsla(90, 53%, 61%, 1); }
+  50% { background-color: hsla(180, 53%, 61%, 1); }
+  75% { background-color: hsla(270, 53%, 61%, 1); }
+  100% { background-color: hsla(360, 53%, 61%, 1); }
+}
+@-ms-keyframes color_change {
+  0% { background-color: hsla(0, 53%, 61%, 1); }
+  25% { background-color: hsla(90, 53%, 61%, 1); }
+  50% { background-color: hsla(180, 53%, 61%, 1); }
+  75% { background-color: hsla(270, 53%, 61%, 1); }
+  100% { background-color: hsla(360, 53%, 61%, 1); }
+}
+@-o-keyframes color_change {
+  0% { background-color: hsla(0, 53%, 61%, 1); }
+  25% { background-color: hsla(90, 53%, 61%, 1); }
+  50% { background-color: hsla(180, 53%, 61%, 1); }
+  75% { background-color: hsla(270, 53%, 61%, 1); }
+  100% { background-color: hsla(360, 53%, 61%, 1); }
+}
+@keyframes color_change {
+  0% { background-color: hsla(0, 53%, 61%, 1); }
+  25% { background-color: hsla(90, 53%, 61%, 1); }
+  50% { background-color: hsla(180, 53%, 61%, 1); }
+  75% { background-color: hsla(270, 53%, 61%, 1); }
+  100% { background-color: hsla(360, 53%, 61%, 1); }
+}
+
+.temparature ul {
+	animation: animationFrames ease 1s;
+  animation-iteration-count: 1;
+  transform-origin: 0% 0%;
+  -webkit-animation: animationFrames ease 1s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 0% 0%;
+  -moz-animation: animationFrames ease 1s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 0% 0%;
+  -o-animation: animationFrames ease 1s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 0% 0%;
+  -ms-animation: animationFrames ease 1s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 0% 0%;
+}
+
+@keyframes animationFrames{
+  0% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:  rotate(0deg) scaleX(0) scaleY(1) ;
+  }
+  100% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    transform:  rotate(0deg) scaleX(1) scaleY(1) ;
+  }
+}
+@-webkit-keyframes animationFrames {
+  0% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:  rotate(0deg) scaleX(0) scaleY(1) ;
+  }
+  100% {
+    left:0px;
+    top:0px;
+    opacity:1;
+    -webkit-transform:  rotate(0deg) scaleX(1) scaleY(1) ;
+  }
+}
+
 .fade-in-1{
-			    animation-delay: 1s;
-  -webkit-animation-delay: 1s;
+			    animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
 }
 .fade-in-2{
-			    animation-delay: 1.1s;
-  -webkit-animation-delay: 1.1s;
+			    animation-delay: 1.6s;
+  -webkit-animation-delay: 1.6s;
 }
 .fade-in-3{
-			    animation-delay: 1.2s;
-  -webkit-animation-delay: 1.2s;
+			    animation-delay: 1.8s;
+  -webkit-animation-delay: 1.8s;
 }
 .fade-in-4{
-			    animation-delay: 1.3s;
-  -webkit-animation-delay: 1.3s;
+			    animation-delay: 1.9s;
+  -webkit-animation-delay: 1.9s;
 }
 .fade-in-5{
-			    animation-delay: 1.4s;
-  -webkit-animation-delay: 1.4s;
+			    animation-delay: 2s;
+  -webkit-animation-delay: 2s;
 }
 .fade-in-6{
-
+			    animation-delay: 0.6s;
+  -webkit-animation-delay: 0.6s;
+  -webkit-animation-duration: 5s;
+     -moz-animation-duration: 5s;
+      -ms-animation-duration: 5s;
+       -o-animation-duration: 5s;
+          animation-duration: 5s;
 }
 
 .fade-in-7{
-			    animation-delay: 0.3s;
-  -webkit-animation-delay: 0.3s;
+			    animation-delay: 0.9s;
+  -webkit-animation-delay: 0.9s;
+  -webkit-animation-duration: 5s;
+     -moz-animation-duration: 5s;
+      -ms-animation-duration: 5s;
+       -o-animation-duration: 5s;
+          animation-duration: 5s;
 }
 
 #blink {
