--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,19 +1,63 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+html,
 body {
-  margin-top: 90px;
+  height: 100%;
+}
+body {
+  overflow: hidden;
   color: #fff;
-  font-family: "Robot-Light";
-  background: #488F9C;
+  font-family: "HelveticaNeue-UltraLight";
 }
 ul,
 ol {
   list-style-type: none;
 }
+.bg {
+  width: 100%;
+  text-align: center;
+}
+.bg img {
+  position: absolute;
+  left: 0;
+  top: 100px;
+  width: 200%;
+}
+@media screen and (min-width: 768px) {
+  .bg img {
+    width: 100%;
+    top: 600px;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .bg img {
+    width: 100%;
+    top: 100px;
+  }
+}
+.setting {
+  position: absolute;
+  top: 0;
+  left: -350px;
+  width: 350px;
+  height: 100%;
+  float: left;
+  padding: 10px;
+  opacity: 0.8;
+  background: #000;
+}
+.detail {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  float: left;
+}
 .clock {
   width: 100%;
   float: left;
   padding: 5%;
-  font-family: "Roboto-Light";
+  font-family: "HelveticaNeue-UltraLight";
   font-size: 150px;
   color: #FFFFFF;
   line-height: 1;
@@ -21,7 +65,6 @@ ol {
 @media screen and (min-width: 768px) {
   .clock {
     font-size: 300px;
-    border: none;
   }
 }
 .clock .hm {
@@ -80,6 +123,14 @@ ol {
 .weather ul li .icon {
   min-height: 60px;
 }
+.weather ul li .icon img {
+  width: 80%;
+}
+@media screen and (min-width: 768px) {
+  .weather ul li .icon img {
+    width: 20%;
+  }
+}
 .weather ul li .rainfall {
   font-family: Roboto-Bold;
   font-size: 20px;
@@ -91,113 +142,57 @@ ol {
   content: "・";
 }
 body {
-  -webkit-animation: color_change 216000s infinite alternate;
-  -moz-animation: color_change 216000s infinite alternate;
-  -ms-animation: color_change 216000s infinite alternate;
-  -o-animation: color_change 216000s infinite alternate;
-  animation: color_change 216000s infinite alternate;
+  -webkit-animation: color_change 10s infinite alternate;
+  -moz-animation: color_change 10s infinite alternate;
+  -ms-animation: color_change 10s infinite alternate;
+  -o-animation: color_change 10s infinite alternate;
+  animation: color_change 10s infinite alternate;
 }
 @-webkit-keyframes color_change {
   0% {
-    background-color: #d06767;
+    background-color: #ac70c7;
   }
   25% {
-    background-color: #9cd067;
+    background-color: #c7b370;
   }
   50% {
-    background-color: #67d0d0;
+    background-color: #c79970;
   }
   75% {
-    background-color: #9c67d0;
+    background-color: #707ac7;
   }
   100% {
-    background-color: #d06767;
+    background-color: #ac70c7;
   }
 }
-@-moz-keyframes color_change {
+.bg img {
+  -webkit-animation: rotate-sun 10s infinite linear;
+  animation: rotate-sun 10s infinite linear;
+}
+@-webkit-keyframes rotate-sun {
   0% {
-    background-color: #d06767;
+    -webkit-transform: rotate(90deg);
   }
   25% {
-    background-color: #9cd067;
+    -webkit-transform: rotate(0deg);
   }
   50% {
-    background-color: #67d0d0;
+    -webkit-transform: rotate(-90deg);
   }
   75% {
-    background-color: #9c67d0;
+    -webkit-transform: rotate(-180deg);
   }
   100% {
-    background-color: #d06767;
+    -webkit-transform: rotate(-270deg);
   }
 }
-@-ms-keyframes color_change {
-  0% {
-    background-color: #d06767;
-  }
-  25% {
-    background-color: #9cd067;
-  }
-  50% {
-    background-color: #67d0d0;
-  }
-  75% {
-    background-color: #9c67d0;
-  }
-  100% {
-    background-color: #d06767;
-  }
-}
-@-o-keyframes color_change {
-  0% {
-    background-color: #d06767;
-  }
-  25% {
-    background-color: #9cd067;
-  }
-  50% {
-    background-color: #67d0d0;
-  }
-  75% {
-    background-color: #9c67d0;
-  }
-  100% {
-    background-color: #d06767;
-  }
-}
-@keyframes color_change {
-  0% {
-    background-color: #d06767;
-  }
-  25% {
-    background-color: #9cd067;
-  }
-  50% {
-    background-color: #67d0d0;
-  }
-  75% {
-    background-color: #9c67d0;
-  }
-  100% {
-    background-color: #d06767;
-  }
-}
-.temparature ul {
+.weather ul {
   animation: animationFrames ease 1s;
   animation-iteration-count: 1;
   transform-origin: 0% 0%;
   -webkit-animation: animationFrames ease 1s;
   -webkit-animation-iteration-count: 1;
   -webkit-transform-origin: 0% 0%;
-  -moz-animation: animationFrames ease 1s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 0% 0%;
-  -o-animation: animationFrames ease 1s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 0% 0%;
-  -ms-animation: animationFrames ease 1s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 0% 0%;
 }
 @keyframes animationFrames {
   0% {
