--- a/less/theme.less
+++ b/less/theme.less
@@ -1,10 +1,14 @@
+@time : 10s;
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 
+html,body{
+	height: 100%;
+}
+
 body{
-	margin-top: 90px;
+	overflow: hidden;
 	color: #fff;
-	font-family: "Robot-Light";
-	background: #488F9C;
+	font-family: "HelveticaNeue-UltraLight";
 }
 
 ul,ol{
@@ -15,17 +19,56 @@ ul,ol{
 // layout
 // ------------------
 
+.bg{
+	width: 100%;
+	text-align: center;
+	img{
+		position: absolute;
+		left: 0;
+		top: 100px;
+		width: 200%;
+		@media screen and (min-width: 768px) {
+			width: 100%;
+			top: 600px;
+		}
+		@media screen and (min-width: 1000px) {
+			width: 100%;
+			top: 100px;
+		}
+	}
+}
+
+.setting{
+	position: absolute;
+	top: 0;
+	left: -350px;
+	width: 350px;
+	height: 100%;
+	float: left;
+	padding: 10px;
+	opacity: 0.8;
+	background: #000;
+}
+
+.detail{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	float: left;
+}
+
 .clock{
 	width: 100%;
 	float: left;
 	padding: 5%;
-	font-family: "Roboto-Light";
+	font-family:"HelveticaNeue-UltraLight";
 	font-size: 150px;
 	color: #FFFFFF;
 	line-height: 1;
 	@media screen and (min-width: 768px) {
 		font-size: 300px;
-		border: none;
 	}
 	.hm{
 		width: 100%;
@@ -82,6 +125,12 @@ ul,ol{
 			}
 			.icon{
 				min-height: 60px;
+				img{
+					width: 80%;
+						@media screen and (min-width: 768px) {
+							width: 20%;
+						}
+				}
 			}
 			.rainfall{
 				font-family: Roboto-Bold;
@@ -102,65 +151,40 @@ ul,ol{
 // ------------------
 
 body{
-	-webkit-animation: color_change 216000s infinite alternate;
-  -moz-animation: color_change 216000s infinite alternate;
-  -ms-animation: color_change 216000s infinite alternate;
-  -o-animation: color_change 216000s infinite alternate;
-  animation: color_change 216000s infinite alternate;
+	-webkit-animation: color_change @time infinite alternate;
+  -moz-animation: color_change @time infinite alternate;
+  -ms-animation: color_change @time infinite alternate;
+  -o-animation: color_change @time infinite alternate;
+  animation: color_change @time infinite alternate;
 }
-
 @-webkit-keyframes color_change {
-  0% { background-color: hsla(0, 53%, 61%, 1); }
-  25% { background-color: hsla(90, 53%, 61%, 1); }
-  50% { background-color: hsla(180, 53%, 61%, 1); }
-  75% { background-color: hsla(270, 53%, 61%, 1); }
-  100% { background-color: hsla(360, 53%, 61%, 1); }
-}
-@-moz-keyframes color_change {
-  0% { background-color: hsla(0, 53%, 61%, 1); }
-  25% { background-color: hsla(90, 53%, 61%, 1); }
-  50% { background-color: hsla(180, 53%, 61%, 1); }
-  75% { background-color: hsla(270, 53%, 61%, 1); }
-  100% { background-color: hsla(360, 53%, 61%, 1); }
-}
-@-ms-keyframes color_change {
-  0% { background-color: hsla(0, 53%, 61%, 1); }
-  25% { background-color: hsla(90, 53%, 61%, 1); }
-  50% { background-color: hsla(180, 53%, 61%, 1); }
-  75% { background-color: hsla(270, 53%, 61%, 1); }
-  100% { background-color: hsla(360, 53%, 61%, 1); }
-}
-@-o-keyframes color_change {
-  0% { background-color: hsla(0, 53%, 61%, 1); }
-  25% { background-color: hsla(90, 53%, 61%, 1); }
-  50% { background-color: hsla(180, 53%, 61%, 1); }
-  75% { background-color: hsla(270, 53%, 61%, 1); }
-  100% { background-color: hsla(360, 53%, 61%, 1); }
-}
-@keyframes color_change {
-  0% { background-color: hsla(0, 53%, 61%, 1); }
-  25% { background-color: hsla(90, 53%, 61%, 1); }
-  50% { background-color: hsla(180, 53%, 61%, 1); }
-  75% { background-color: hsla(270, 53%, 61%, 1); }
-  100% { background-color: hsla(360, 53%, 61%, 1); }
+  0% { background-color: hsla(281, 44%, 61%, 1); }
+  25% { background-color: hsla(46, 44%, 61%, 1); }
+  50% { background-color: hsla(28, 44%, 61%, 1); }
+  75% { background-color: hsla(233, 44%, 61%, 1); }
+  100% { background-color: hsla(281, 44%, 61%, 1); }
 }
 
-.temparature ul {
+.bg img{
+	-webkit-animation: rotate-sun @time infinite linear;
+  animation: rotate-sun @time infinite linear;
+}
+
+@-webkit-keyframes rotate-sun {
+	0%{-webkit-transform:rotate(90deg);}
+	25%{-webkit-transform:rotate(0deg);}
+	50%{-webkit-transform:rotate(-90deg);}
+	75%{-webkit-transform:rotate(-180deg);}
+	100%{-webkit-transform:rotate(-270deg);}
+}
+
+.weather ul {
 	animation: animationFrames ease 1s;
   animation-iteration-count: 1;
   transform-origin: 0% 0%;
   -webkit-animation: animationFrames ease 1s;
   -webkit-animation-iteration-count: 1;
   -webkit-transform-origin: 0% 0%;
-  -moz-animation: animationFrames ease 1s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 0% 0%;
-  -o-animation: animationFrames ease 1s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 0% 0%;
-  -ms-animation: animationFrames ease 1s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 0% 0%;
 }
 
 @keyframes animationFrames{
