--- a/less/theme.less
+++ b/less/theme.less
@@ -1,5 +1,12 @@
+//===============
+// variables
+//===============
 @time : 10s;
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
+
+//===============
+// basic styles
+//===============
 
 html,body{
 	height: 100%;
@@ -7,7 +14,7 @@ html,body{
 
 body{
 	overflow: hidden;
-	color: #fff;
+	color: #FFF;
 	font-family: "HelveticaNeue-UltraLight";
 }
 
