--- a/less/theme.less
+++ b/less/theme.less
@@ -1,7 +1,6 @@
 //===============
 // variables
 //===============
-@time : 10s;
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 
 //===============
@@ -48,7 +47,7 @@ ul,ol{
 .setting{
 	position: absolute;
 	top: 0;
-	left: -350px;
+	left: -370px;
 	width: 350px;
 	height: 100%;
 	float: left;
@@ -89,18 +88,18 @@ ul,ol{
 	}
 }
 
-.schedule{
-	display: none;
-	margin-top: 40px;
-	font-family: "Roboto-Light";
-	font-size: 30px;
-	color: #FFFFFF;
-	line-height: 2;
-	opacity: 0.5;
-	ol{
-		list-style-type: none;
-	}
-}
+// .schedule{
+// 	display: none;
+// 	margin-top: 40px;
+// 	font-family: "Roboto-Light";
+// 	font-size: 30px;
+// 	color: #FFFFFF;
+// 	line-height: 2;
+// 	opacity: 0.5;
+// 	ol{
+// 		list-style-type: none;
+// 	}
+// }
 
 .weather{
 	clear: both;
@@ -151,123 +150,4 @@ ul,ol{
 			content: "・";
 		}
 	}
-}
-
-// ------------------
-// animation
-// ------------------
-
-body{
-	-webkit-animation: color_change @time infinite alternate;
-  -moz-animation: color_change @time infinite alternate;
-  -ms-animation: color_change @time infinite alternate;
-  -o-animation: color_change @time infinite alternate;
-  animation: color_change @time infinite alternate;
-}
-@-webkit-keyframes color_change {
-  0% { background-color: hsla(281, 44%, 61%, 1); }
-  25% { background-color: hsla(46, 44%, 61%, 1); }
-  50% { background-color: hsla(28, 44%, 61%, 1); }
-  75% { background-color: hsla(233, 44%, 61%, 1); }
-  100% { background-color: hsla(281, 44%, 61%, 1); }
-}
-
-.bg img{
-	-webkit-animation: rotate-sun @time infinite linear;
-  animation: rotate-sun @time infinite linear;
-}
-
-@-webkit-keyframes rotate-sun {
-	0%{-webkit-transform:rotate(90deg);}
-	25%{-webkit-transform:rotate(0deg);}
-	50%{-webkit-transform:rotate(-90deg);}
-	75%{-webkit-transform:rotate(-180deg);}
-	100%{-webkit-transform:rotate(-270deg);}
-}
-
-.weather ul {
-	animation: animationFrames ease 1s;
-  animation-iteration-count: 1;
-  transform-origin: 0% 0%;
-  -webkit-animation: animationFrames ease 1s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-transform-origin: 0% 0%;
-}
-
-@keyframes animationFrames{
-  0% {
-    left:0px;
-    top:0px;
-    opacity:1;
-    transform:  rotate(0deg) scaleX(0) scaleY(1) ;
-  }
-  100% {
-    left:0px;
-    top:0px;
-    opacity:1;
-    transform:  rotate(0deg) scaleX(1) scaleY(1) ;
-  }
-}
-@-webkit-keyframes animationFrames {
-  0% {
-    left:0px;
-    top:0px;
-    opacity:1;
-    -webkit-transform:  rotate(0deg) scaleX(0) scaleY(1) ;
-  }
-  100% {
-    left:0px;
-    top:0px;
-    opacity:1;
-    -webkit-transform:  rotate(0deg) scaleX(1) scaleY(1) ;
-  }
-}
-
-.fade-in-1{
-			    animation-delay: 1.5s;
-  -webkit-animation-delay: 1.5s;
-}
-.fade-in-2{
-			    animation-delay: 1.6s;
-  -webkit-animation-delay: 1.6s;
-}
-.fade-in-3{
-			    animation-delay: 1.8s;
-  -webkit-animation-delay: 1.8s;
-}
-.fade-in-4{
-			    animation-delay: 1.9s;
-  -webkit-animation-delay: 1.9s;
-}
-.fade-in-5{
-			    animation-delay: 2s;
-  -webkit-animation-delay: 2s;
-}
-.fade-in-6{
-			    animation-delay: 0.6s;
-  -webkit-animation-delay: 0.6s;
-  -webkit-animation-duration: 5s;
-     -moz-animation-duration: 5s;
-      -ms-animation-duration: 5s;
-       -o-animation-duration: 5s;
-          animation-duration: 5s;
-}
-
-.fade-in-7{
-			    animation-delay: 0.9s;
-  -webkit-animation-delay: 0.9s;
-  -webkit-animation-duration: 5s;
-     -moz-animation-duration: 5s;
-      -ms-animation-duration: 5s;
-       -o-animation-duration: 5s;
-          animation-duration: 5s;
-}
-
-#blink {
-			    animation-duration: 10s;
-			    animation-delay: 1s;
-			    animation-iteration-count: infinite;
-  -webkit-animation-duration: 6s;
-  -webkit-animation-delay: 1s;
-  -webkit-animation-iteration-count: infinite;
 }
