天気アイコンをwebfontに

--- a/less/theme.less
+++ b/less/theme.less
@@ -147,16 +147,12 @@ body{
 					font-size: 16px;
 				}
 			}
-			.icon{
-				min-height: 60px;
-				img{
-					width: 80%;
-						@media screen and (min-width: 768px) {
-							width: 20%;
-						}
-				}
+			i{
+				min-height: 1em;
+				font-size: 60px;
 			}
 			.rainfall{
+				margin-top: 10px;
 				font-size: 20px;
 				line-height: 26px;
 			}
