--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -181,18 +181,12 @@ body {
   padding-left: 5px;
   font-size: 16px;
 }
-.weather ul li .icon {
-  min-height: 60px;
-}
-.weather ul li .icon img {
-  width: 80%;
-}
-@media screen and (min-width: 768px) {
-  .weather ul li .icon img {
-    width: 20%;
-  }
+.weather ul li i {
+  min-height: 1em;
+  font-size: 60px;
 }
 .weather ul li .rainfall {
+  margin-top: 10px;
   font-size: 20px;
   line-height: 26px;
 }
