ブラウザ互換向上

--- a/less/_form.less
+++ b/less/_form.less
@@ -1,4 +1,4 @@
-@base-fontfamily: "HelveticaNeue-UltraLight", "Yu Gothic", Meiryo, "Helvetica Neue Light", sans-serif;
+@base-fontfamily: "HelveticaNeue-UltraLight", sans-serif;
 
 form{
 	padding: 0px;
