--- a/less/screen.less
+++ b/less/screen.less
@@ -1,4 +1,5 @@
-@import 'reset.less';
-@import 'form.less';
-@import 'theme.less';
-@import 'animate.less';
+@import '_reset';
+@import '_form';
+@import '_theme';
+@import '_animate';
+@import 'weather-icons.css';
