--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat|Lato|Open+Sans|Playfair+Display|Alegreya);
+@import 'weather-icons.css';
 select,
 input {
   -moz-appearance: none;
@@ -97,25 +98,60 @@ body {
   opacity: 0.8;
   background: #000;
 }
+.setting .wrapper {
+  min-height: 300px;
+}
+.setting section {
+  padding: 10px;
+}
 .setting a {
   color: #FFF;
 }
 .setting h2 {
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
-.setting form {
-  margin-bottom: 3px;
+.setting select {
+  width: 300px;
 }
 .setting footer {
   position: absolute;
   width: inherit;
-  bottom: 4em;
+  bottom: 1em;
   padding-top: 20px;
   text-align: center;
 }
-.setting .column-2 input[type=button] {
-  width: 41.5%;
-  display: inline-table;
+.setting .column-2 ul {
+  padding-left: 0;
+}
+.setting .column-2 ul li {
+  display: inline-block;
+  position: relative;
+  width: 47%;
+  padding: .3em 0;
+}
+.setting .column-2 ul li input[type=radio] {
+  background-color: #222;
+  opacity: 0;
+}
+.setting .column-2 ul li input[type=radio]:checked + label {
+  background-color: #F25577;
+}
+.setting .column-2 ul li label {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2em;
+  font-size: 20px;
+  background-color: #222;
+  border-radius: 3px;
+}
+.setting .column-2 ul li label span {
+  display: block;
+  position: relative;
+  top: .4em;
+  text-align: center;
 }
 .setting .set-startpage {
   margin-top: 60px;
@@ -195,7 +231,25 @@ body {
   content: "・";
 }
 body {
+  -webkit-animation: color-change 10s infinite alternate;
   animation: color-change 10s infinite alternate;
+}
+@-webkit-keyframes color-change {
+  0% {
+    background-color: #ac70c7;
+  }
+  25% {
+    background-color: #c7b370;
+  }
+  50% {
+    background-color: #c79970;
+  }
+  75% {
+    background-color: #707ac7;
+  }
+  100% {
+    background-color: #ac70c7;
+  }
 }
 @keyframes color-change {
   0% {
@@ -215,42 +269,76 @@ body {
   }
 }
 .bg img {
+  -webkit-animation: rotate-sun 10s infinite linear;
   animation: rotate-sun 10s infinite linear;
 }
-@keyframes rotate-sun {
+@-webkit-keyframes rotate-sun {
   0% {
+    -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
   }
   25% {
+    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   50% {
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
   }
   75% {
+    -webkit-transform: rotate(-180deg);
     transform: rotate(-180deg);
   }
   100% {
+    -webkit-transform: rotate(-270deg);
+    transform: rotate(-270deg);
+  }
+}
+@keyframes rotate-sun {
+  0% {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+  }
+  25% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+  }
+  75% {
+    -webkit-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-270deg);
     transform: rotate(-270deg);
   }
 }
 .weather ul {
+  -webkit-animation-duration: 10s;
   animation-duration: 10s;
+  -webkit-animation: animationFrames ease 1s;
   animation: animationFrames ease 1s;
+  -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
+  -webkit-transform-origin: 0% 0%;
   transform-origin: 0% 0%;
 }
-@keyframes animationFrames {
+@-webkit-keyframes animationFrames {
   0% {
     left: 0px;
     top: 0px;
     opacity: 1;
+    -webkit-transform: rotate(0deg) scaleX(0) scaleY(1);
     transform: rotate(0deg) scaleX(0) scaleY(1);
   }
   100% {
     left: 0px;
     top: 0px;
     opacity: 1;
+    -webkit-transform: rotate(0deg) scaleX(1) scaleY(1);
     transform: rotate(0deg) scaleX(1) scaleY(1);
   }
 }
@@ -259,47 +347,72 @@ body {
     left: 0px;
     top: 0px;
     opacity: 1;
+    -webkit-transform: rotate(0deg) scaleX(0) scaleY(1);
     transform: rotate(0deg) scaleX(0) scaleY(1);
   }
   100% {
     left: 0px;
     top: 0px;
     opacity: 1;
+    -webkit-transform: rotate(0deg) scaleX(1) scaleY(1);
+    transform: rotate(0deg) scaleX(1) scaleY(1);
+  }
+}
+@keyframes animationFrames {
+  0% {
+    left: 0px;
+    top: 0px;
+    opacity: 1;
+    -webkit-transform: rotate(0deg) scaleX(0) scaleY(1);
+    transform: rotate(0deg) scaleX(0) scaleY(1);
+  }
+  100% {
+    left: 0px;
+    top: 0px;
+    opacity: 1;
+    -webkit-transform: rotate(0deg) scaleX(1) scaleY(1);
     transform: rotate(0deg) scaleX(1) scaleY(1);
   }
 }
 .fade-in-1 {
+  -webkit-animation-delay: 1.5s;
   animation-delay: 1.5s;
 }
 .fade-in-2 {
+  -webkit-animation-delay: 1.6s;
   animation-delay: 1.6s;
 }
 .fade-in-3 {
+  -webkit-animation-delay: 1.8s;
   animation-delay: 1.8s;
 }
 .fade-in-4 {
+  -webkit-animation-delay: 1.9s;
   animation-delay: 1.9s;
 }
 .fade-in-5 {
+  -webkit-animation-delay: 2s;
   animation-delay: 2s;
 }
 .fade-in-6 {
+  -webkit-animation-delay: 0.6s;
   animation-delay: 0.6s;
-  -moz-animation-duration: 5s;
-  -ms-animation-duration: 5s;
-  -o-animation-duration: 5s;
+  -webkit-animation-duration: 5s;
   animation-duration: 5s;
 }
 .fade-in-7 {
+  -webkit-animation-delay: 0.9s;
   animation-delay: 0.9s;
-  -moz-animation-duration: 5s;
-  -ms-animation-duration: 5s;
-  -o-animation-duration: 5s;
+  -webkit-animation-duration: 5s;
   animation-duration: 5s;
 }
 #blink {
+  -webkit-animation-duration: 10s;
   animation-duration: 10s;
+  -webkit-animation-duration: 6s;
   animation-duration: 6s;
+  -webkit-animation-delay: 1s;
   animation-delay: 1s;
+  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
 }
