県名を表示

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -168,25 +168,24 @@ body {
   float: left;
 }
 .clock {
+  position: relative;
   width: 100%;
   float: left;
   padding: 5%;
-  font-size: 150px;
+  font-size: 70px;
   line-height: 1;
 }
+.clock .hm {
+  font-size: 150px;
+}
 @media screen and (min-width: 768px) {
-  .clock {
+  .clock .hm {
     font-size: 300px;
   }
 }
-.clock .hm {
-  width: 100%;
-  display: inline-block;
-}
-.clock .dw {
-  display: block;
+.clock .ar small {
   font-size: 50px;
-  margin-left: .8em;
+  opacity: .9;
 }
 .weather {
   clear: both;
