--- a/less/_theme.less
+++ b/less/_theme.less
@@ -68,7 +68,7 @@ body{
 	section{padding: 10px;}
 	a{color: #FFF;}
 	h2{margin: 10px 0;}
-	select{width: 300px;}
+	select{width: 90%;}
 	footer{
 		position: absolute;
 		width: inherit;
@@ -190,4 +190,10 @@ body{
 			content: "・";
 		}
 	}
+}
+
+.btn-fullscreen{
+	position: absolute;
+	right: 10px;
+	color: rgba(0, 0, 0, 0.5);
 }
