--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -192,16 +192,15 @@ body {
   padding-top: 20px;
 }
 .weather ul {
+  margin: -39px 0 0 0;
   padding: 0;
   padding-top: 20px;
   font-size: 30px;
   line-height: 39px;
-  border-top: 1px solid;
 }
 .weather ul li {
   display: inline-block;
   width: 23%;
-  margin: -40px 0 0 0;
   padding: 0;
   vertical-align: top;
   text-align: center;
@@ -320,103 +319,126 @@ body {
     transform: rotate(-270deg);
   }
 }
-.weather ul {
-  -webkit-animation-duration: 10s;
-  animation-duration: 10s;
-  -webkit-animation: animationFrames ease 1s;
-  animation: animationFrames ease 1s;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
+#blink {
+  -webkit-animation: blink 2s infinite alternate;
+  animation: blink 2s infinite alternate;
+}
+@-webkit-keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.fadein {
+  -webkit-animation: fadein 2s ease-in 0s 1 alternate backwards;
+  animation: fadein 2s ease-in 0s 1 alternate backwards;
+}
+.hanging.fadein {
+  -webkit-animation: fadein 2s ease-in 0.3s 1 alternate backwards;
+  animation: fadein 2s ease-in 0.3s 1 alternate backwards;
+}
+@-webkit-keyframes fadein {
+  0% {
+    opacity: 0;
+    margin-top: -10px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
+@keyframes fadein {
+  0% {
+    opacity: 0;
+    margin-top: -10px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
+.liner {
+  -webkit-animation: animation-frames 1s ease-in-out 3s 1 alternate backwards;
+  animation: animation-frames 1s ease-in-out 3s 1 alternate backwards;
   -webkit-transform-origin: 0% 0%;
   transform-origin: 0% 0%;
+  border-top: 1px solid #FFF;
 }
-@-webkit-keyframes animationFrames {
+@-webkit-keyframes animation-frames {
   0% {
-    left: 0px;
-    top: 0px;
-    opacity: 1;
+    opacity: 0;
     -webkit-transform: rotate(0deg) scaleX(0) scaleY(1);
     transform: rotate(0deg) scaleX(0) scaleY(1);
   }
   100% {
-    left: 0px;
-    top: 0px;
     opacity: 1;
     -webkit-transform: rotate(0deg) scaleX(1) scaleY(1);
     transform: rotate(0deg) scaleX(1) scaleY(1);
   }
 }
-@keyframes animationFrames {
+@keyframes animation-frames {
   0% {
-    left: 0px;
-    top: 0px;
-    opacity: 1;
+    opacity: 0;
     -webkit-transform: rotate(0deg) scaleX(0) scaleY(1);
     transform: rotate(0deg) scaleX(0) scaleY(1);
   }
   100% {
-    left: 0px;
-    top: 0px;
     opacity: 1;
     -webkit-transform: rotate(0deg) scaleX(1) scaleY(1);
     transform: rotate(0deg) scaleX(1) scaleY(1);
   }
 }
-@keyframes animationFrames {
+.weather ul li:nth-child(1) {
+  -webkit-animation: popin 0.5s ease-in 3.5s 1 alternate backwards;
+  animation: popin 0.5s ease-in 3.5s 1 alternate backwards;
+}
+.weather ul li:nth-child(2) {
+  -webkit-animation: popin 0.5s ease-in 3.75s 1 alternate backwards;
+  animation: popin 0.5s ease-in 3.75s 1 alternate backwards;
+}
+.weather ul li:nth-child(3) {
+  -webkit-animation: popin 0.5s ease-in 4s 1 alternate backwards;
+  animation: popin 0.5s ease-in 4s 1 alternate backwards;
+}
+.weather ul li:nth-child(4) {
+  -webkit-animation: popin 0.5s ease-in 4.25s 1 alternate backwards;
+  animation: popin 0.5s ease-in 4.25s 1 alternate backwards;
+}
+@-webkit-keyframes popin {
   0% {
-    left: 0px;
-    top: 0px;
+    opacity: 0;
+    margin-top: -10px;
+  }
+  90% {
     opacity: 1;
-    -webkit-transform: rotate(0deg) scaleX(0) scaleY(1);
-    transform: rotate(0deg) scaleX(0) scaleY(1);
+    margin-top: 3px;
   }
   100% {
-    left: 0px;
-    top: 0px;
     opacity: 1;
-    -webkit-transform: rotate(0deg) scaleX(1) scaleY(1);
-    transform: rotate(0deg) scaleX(1) scaleY(1);
+    margin-top: 0px;
   }
 }
-.fade-in-1 {
-  -webkit-animation-delay: 1.5s;
-  animation-delay: 1.5s;
-}
-.fade-in-2 {
-  -webkit-animation-delay: 1.6s;
-  animation-delay: 1.6s;
-}
-.fade-in-3 {
-  -webkit-animation-delay: 1.8s;
-  animation-delay: 1.8s;
-}
-.fade-in-4 {
-  -webkit-animation-delay: 1.9s;
-  animation-delay: 1.9s;
-}
-.fade-in-5 {
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-}
-.fade-in-6 {
-  -webkit-animation-delay: 0.6s;
-  animation-delay: 0.6s;
-  -webkit-animation-duration: 5s;
-  animation-duration: 5s;
-}
-.fade-in-7 {
-  -webkit-animation-delay: 0.9s;
-  animation-delay: 0.9s;
-  -webkit-animation-duration: 5s;
-  animation-duration: 5s;
-}
-#blink {
-  -webkit-animation-duration: 10s;
-  animation-duration: 10s;
-  -webkit-animation-duration: 6s;
-  animation-duration: 6s;
-  -webkit-animation-delay: 1s;
-  animation-delay: 1s;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+@keyframes popin {
+  0% {
+    opacity: 0;
+    margin-top: -10px;
+  }
+  90% {
+    opacity: 1;
+    margin-top: 3px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0px;
+  }
 }
