--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -166,36 +166,27 @@ body {
   width: 100%;
   height: 100%;
   float: left;
+  text-align: center;
 }
 .clock {
-  position: relative;
-  width: 100%;
-  float: left;
-  padding: 5%;
-  font-size: 70px;
-  line-height: 1;
+  margin-top: 100px;
+  font-size: 40px;
 }
 .clock .hm {
-  font-size: 150px;
-}
-@media screen and (min-width: 768px) {
-  .clock .hm {
-    font-size: 300px;
-  }
-}
-.clock .ar small {
-  font-size: 50px;
-  opacity: .9;
+  font-size: 200px;
+  line-height: 1;
 }
 .weather {
-  clear: both;
-  padding-top: 20px;
+  margin-top: 100px;
+}
+.weather .liner {
+  border-top: 1px solid;
 }
 .weather ul {
   margin: -39px 0 0 0;
   padding: 0;
   padding-top: 20px;
-  font-size: 30px;
+  font-size: 20px;
   line-height: 39px;
 }
 .weather ul li {
@@ -216,8 +207,8 @@ body {
   font-size: 16px;
 }
 .weather ul li i {
-  min-height: 1em;
-  font-size: 60px;
+  margin-top: 10px;
+  font-size: 50px;
 }
 .weather ul li .rainfall {
   margin-top: 10px;
@@ -230,8 +221,15 @@ body {
 }
 .btn-fullscreen {
   position: absolute;
+  top: 10px;
   right: 10px;
   color: rgba(0, 0, 0, 0.5);
+}
+.name {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 20px;
 }
 body {
   -webkit-animation: color-change 10s infinite alternate;
@@ -372,7 +370,6 @@ body {
   animation: animation-frames 1s ease-in-out 3s 1 alternate backwards;
   -webkit-transform-origin: 0% 0%;
   transform-origin: 0% 0%;
-  border-top: 1px solid #FFF;
 }
 @-webkit-keyframes animation-frames {
   0% {
