--- a/less/_theme.less
+++ b/less/_theme.less
@@ -128,35 +128,26 @@ body{
 	width: 100%;
 	height: 100%;
 	float: left;
+	text-align: center;
 }
 
 .clock{
-	position: relative;
-	width: 100%;
-	float: left;
-	padding: 5%;
-	font-size: 70px;
-	line-height: 1;
+	margin-top: 100px;
+	font-size: 40px;
 	.hm{
-		font-size: 150px;
-		@media screen and (min-width: 768px) {
-			font-size: 300px;
-		}
-	}
-	.ar small{
-		font-size: 50px;
-		opacity: .9;
+		font-size: 200px;
+		line-height: 1;
 	}
 }
 
 .weather{
-	clear: both;
-	padding-top: 20px;
+	.liner{border-top: 1px solid;}
+	margin-top: 100px;
 	ul{
 		margin: -39px 0 0 0;
 		padding: 0;
 		padding-top: 20px;
-		font-size: 30px;
+		font-size: 20px;
 		line-height: 39px;
 		li{
 			display: inline-block;
@@ -175,8 +166,8 @@ body{
 				}
 			}
 			i{
-				min-height: 1em;
-				font-size: 60px;
+				margin-top: 10px;
+				font-size: 50px;
 			}
 			.rainfall{
 				margin-top: 10px;
@@ -193,6 +184,14 @@ body{
 
 .btn-fullscreen{
 	position: absolute;
+	top: 10px;
 	right: 10px;
 	color: rgba(0, 0, 0, 0.5);
+}
+
+.name{
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	font-size: 20px;
 }
