--- a/less/_theme.less
+++ b/less/_theme.less
@@ -34,6 +34,8 @@ body{
 	overflow: hidden;
 	color: #FFF;
 	font-family: @base-fontfamily;
+	background:url('../img/bg.svg') no-repeat right bottom; 
+	background-blend-mode: multiply;
 }
 
 .bg{
@@ -134,6 +136,7 @@ body{
 .clock{
 	margin-top: 100px;
 	font-size: 40px;
+
 	.hm{
 		font-size: 200px;
 		line-height: 1;
@@ -194,4 +197,15 @@ body{
 	top: 10px;
 	left: 10px;
 	font-size: 20px;
+}
+
+.btn-social{
+	margin: 0;
+	padding-left: 0;
+	text-align: center;
+	li{
+		display: inline-block;
+		padding-right: 10px;
+		font-size: 20px;
+	}
 }
