--- a/less/_theme.less
+++ b/less/_theme.less
@@ -42,17 +42,14 @@ body{
 	width: 100%;
 	text-align: center;
 	img{
-		overflow: hidden;
+		display: none;
 		position: absolute;
-		left: -100px;
-		top: -100px;
-		@media screen and (min-width: 768px) {
+		top: 30px;
+		left: -50%;
+		width: 200%;
+		@media screen and (min-width: 480px) {
+			left: 0;
 			width: 100%;
-			top: 600px;
-		}
-		@media screen and (min-width: 1000px) {
-			width: 100%;
-			top: 100px;
 		}
 	}
 }
